sample/retrieveUnpackaged/objects/CaseTypeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Is_Auto_Suspend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Suspend?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Billing_Account_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Account Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quick_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Notes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visualforce_Page__c</fullName>
        <label>Visualforce Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CaseTypeSettings</label>
</CustomObject>